[package]
name = "rust_api_proj"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
path = "src/utils.rs"

[[bin]]
edition = "2018"
name = "rust_api_proj"
path = "src/main.rs"
